samples/_failures_safe/1761436120_388618_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f6b5fe71.c: In function ‘main’:
./samples/SAFE/__tmp_f6b5fe71.c:151:29: error: missing terminating " character
  151 |             fprintf(stderr, "Error: Invalid operation number\n
      |                             ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_f6b5fe71.c:151:13: error: expected expression at end of input
  151 |             fprintf(stderr, "Error: Invalid operation number\n
      |             ^~~~~~~
./samples/SAFE/__tmp_f6b5fe71.c:151:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_f6b5fe71.c:151:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_f6b5fe71.c:151:13: error: expected declaration or statement at end of input
